--- a/mobee-app/bower.json
+++ b/mobee-app/bower.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "angular": "~1.3.16",
     "angular-route": "~1.3.16",
-    "angular-mocks": "~1.3.16"
+    "angular-mocks": "~1.3.16",
+    "angular-material": "^1.0.9",
+    "angular-ui-router": "^0.3.1"
   }
 }
