--- a/mobee-app/package.json
+++ b/mobee-app/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "Luisa Zapata",
