--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.4.3",
+    "bower-installer": "^1.2.0",
     "express": "^4.13.4",
     "morgan": "^1.1.1",
+    "nodemon": "^1.10.2",
     "request": "^2.74.0"
   }
 }
