--- a/bower.json
+++ b/bower.json
@@ -10,10 +10,8 @@
     "client/lib"
   ],
   "dependencies": {
-    "angular": "~1.3.16",
-    "angular-route": "~1.3.16",
-    "angular-mocks": "~1.3.16",
-    "angular-material": "^1.0.9",
-    "angular-ui-router": "^0.3.1"
+    "angular": "^1.5.8",
+    "angular-ui-router": "^0.3.1",
+    "angular-material": "^1.1.0"
   }
 }
