--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.13.4",
     "morgan": "^1.1.1",
     "nodemon": "^1.10.2",
-    "request": "^2.74.0"
+    "request": "^2.74.0",
+    
   }
 }
